# Logora

./: .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  payment.rar  start.sh
.github/workflows/: deploy.yml
accounts/: Dockerfile  account.db  accounts.py  config.py  requirements.txt  schema.sql
api/: api.db  app.py  config.py  db.sqlite3  requirements.txt  schema.sql
backend/: CMakeLists.txt  Dockerfile.cpp
backend/include/: account.h  accounts.h  api.h  charge.h  charges.h  db.h  payments.h
backend/src/: account.cpp  accounts.cpp  api.cpp  charge.cpp  charges.cpp  db.cpp  main.cpp  payments.cpp
backend/tests/: test_account.cpp  test_charge.cpp  test_payment.cpp
billing/: Dockerfile  app.py  billing.db  config.py  requirements.txt  schema.sql
billing/data/: billing.db
billing/database/: connection.py  models.py  seeds.sql
billing/monitoring/: logging.py
billing/routes/: billing_routes.py
billing/services/: billing_service.py
billing/swagger/: models.py
billing/utils/: transformers.py
db/: logora.sqlite  schema.sql  test.db  test_dara.sql  test_data.sql
docs/: Baga.txt  Общие.данные.txt
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package.json  pnpm-lock.yaml  prettier.config.mjs  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/entities/accounts/: api.ts  index.ts
frontend/src/entities/accounts/ui/AccountCard/: AccountCard.tsx
frontend/src/entities/billing/: api.ts  index.ts
frontend/src/entities/payments/: api.ts  index.ts
frontend/src/entities/tasks/: api.ts  index.ts
frontend/src/features/auth/: api.ts
frontend/src/features/auth/ui/AuthModal/: AuthModal.tsx
frontend/src/features/auth/ui/UserAvatar/: UserAvatar.tsx
frontend/src/features/createAccount/: api.ts  index.ts
frontend/src/features/createAccount/ui/CreateAccountForm/: CreateAccountForm.tsx  index.ts
frontend/src/features/exportReport/: index.ts
frontend/src/features/exportReport/ui/ExportReport/: ExportReport.tsx  index.ts
frontend/src/features/pay/: api.ts  index.ts
frontend/src/features/pay/ui/Pay/: Pay.tsx
frontend/src/pages/account/: Account.tsx
frontend/src/pages/accounts/: Accounts.tsx
frontend/src/pages/home/: Home.module.scss  Home.tsx
frontend/src/pages/orders/: Orders.tsx
frontend/src/pages/paymentHistory/: PaymentHistory.tsx
frontend/src/shared/api/: index.ts
frontend/src/shared/routing/: ProtectedRoute.tsx
frontend/src/shared/session/: api.ts  index.ts  provider.tsx
frontend/src/shared/ui/showOnly/: ShowOnly.tsx  index.ts
frontend/src/widgets/layout/: Layout.module.scss  Layout.tsx
payment/: Dockerfile  app.py  config.py  payment.db  payment_service.py  requirements.txt  schema.sql
payment/data/: payments.db
payment/database/: connection.py  models.py
payment/routes/: payments_routes.py
payment/services/: payment_service.py
payment/swarge/: models.py
payment/utils/: responses.py
python/: Dockerfile  Dockerfile.python  app.py  auth.py  db.sqlite3  forms.py  init_db.py  pdf_generator.py  requirements.txt  schema.sql
python/static/: style.css
python/static/css/: main.css  style.css
python/static/js/: auth.js  main.js
python/templates/: articles.html  base.html  index.html  login.html  profile.html  register.html  registrat.html  team.html
python/tests/: conftest.py  test_accounts.py  test_articles.py  test_auth.py  test_pdf.py  test_profile.py
report/: Dockerfile  app.py  config.py  pdf_oq.py  report.db  requirements.txt  schema.sql
report/data/: reports.db  schema.sql
report/database/: connection.py  models.py
report/monitoring/: logging.py
report/routes/: report_routes.py
report/services/: report_service.py
report/utils/: dirs.py
tasks/: app.py  config.py  requirements.txt
tasks/data/: tasks.db
tasks/database/: connection.py  models.py  seeds.sql
tasks/monitoring/: logging.py
tasks/routes/: task_routes.py
tasks/services/: task_service.py
tasks/swagger/: models.py
tasks/utils/: helpers.py
users/: app.py  config.py  requirements.txt  schema.sql
users/data/: users.db
users/database/: connection.py  models.py
users/monitoring/: logger.py
users/routes/: users_routes.py
users/services/: users_service.py
